// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptureAuthorizationButton should render normal status 1`] = `
<div>
  <button
    class="components-button is-secondary is-small"
    type="button"
  >
    Capture
  </button>
</div>
`;

exports[`CaptureAuthorizationButton should transition to busy state when clicked 1`] = `
<div>
  <button
    class="components-button is-secondary is-small is-busy"
    disabled=""
    type="button"
  >
    Capture
  </button>
</div>
`;
